# node-ffi-generator

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  package.json
include/ffigen/: generate_node_ffi_interface.hpp
include/ffigen/generate/: generate_js_files.hpp  generator.hpp  generator_factory.hpp  interface_generator.hpp
include/ffigen/generate/generator/: enum_map_generator.hpp  function_map_generator.hpp  library_load_generator.hpp  record_map_generator.hpp  struct_map_generator.hpp  typedef_map_generator.hpp  union_map_generator.hpp
include/ffigen/process/: clang_facade.hpp  code_entity.hpp  code_entity_factory.hpp  parse_files.hpp  symbol.hpp  symbol_factory.hpp  symbol_table.hpp
include/ffigen/process/code_entity/: array_entity.hpp  enum.hpp  function.hpp  function_pointer_entity.hpp  fundamental_type.hpp  lazy.hpp  record.hpp  reference.hpp  struct.hpp  typedef.hpp  union.hpp
include/ffigen/process/filters/: include_symbols_in_lib.hpp
include/ffigen/process/symbol/: array_symbol.hpp  enum_symbol.hpp  function_pointer_symbol.hpp  function_symbol.hpp  fundamental_type_symbol.hpp  lazy.hpp  record_symbol.hpp  reference_symbol.hpp  typedef_symbol.hpp
include/ffigen/utility/: error_codes.hpp  exceptions.hpp  logger.hpp  type_erasure_base.hpp
source/: generate_node_ffi_interface.cpp  main.cpp
source/generate/: generate.cpp  generate_js_files.cpp  generator_factory.cpp  interface_generator.cpp
source/generate/generator/: enum_map_generator.cpp  function_map_generator.cpp  library_load_generator.cpp  record_map_generator.cpp  struct_map_generator.cpp  typedef_map_generator.cpp  union_map_generator.cpp
source/process/: clang_facade.cpp  code_entity.cpp  code_entity_factory.cpp  parse_files.cpp  symbol.cpp  symbol_factory.cpp  symbol_table.cpp
source/process/code_entity/: array_entity.cpp  enum.cpp  function.cpp  function_pointer_entity.cpp  fundamental_type.cpp  lazy_code_entity.cpp  record.cpp  reference.cpp  typedef.cpp
source/process/filters/: include_symbols_in_lib.cpp
source/process/symbol/: array_symbol.cpp  enum_symbol.cpp  function_pointer_symbol.cpp  function_symbol.cpp  fundamental_type_symbol.cpp  lazy_code_entity.cpp  lazy_symbol.cpp  record_symbol.cpp  reference_symbol.cpp  typedef_symbol.cpp
source/utility/: logger.cpp
tests/smoke/: input.c  input.h  other.h  run-test.sh  test-generated.js  used.h
tests/smoke/dir/: other-header.h
